--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,10 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 0 5%;
-  border-bottom: 1px solid #272D2B;
+  border-bottom: 1px solid #272d2b;
 }
 
 h1 {
-font-size: 30px;
-font-family: MAZIUS REVIEW 20.09;
-font-style: italic;
+  font-size: 30px;
+  font-style: italic;
 }
