--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,63 +1,60 @@
 .container {
-    background-color: #fff;
-    color: #0E1010;
-    border-radius: 20px;
-    margin: 5%;
-    padding: 5%;
+  background-color: #fff;
+  color: #0e1010;
+  border-radius: 20px;
+  margin: 5%;
+  padding: 5%;
 }
 
 .container h2 {
-font-size: 28px;
-font-family: MAZIUS REVIEW 20.09;
-font-style: italic;
-margin-top: 0;
+  font-size: 28px;
+  font-style: italic;
+  margin-top: 0;
 }
 
 .container p {
-font-size: 16px;
-font-family: Avenir Next LT Pro;
-line-height: 130%;
-text-align: justify;
+  font-size: 16px;
+  line-height: 130%;
+  text-align: justify;
 }
 
 .logo {
-    color: black;
-    font-size: 25px;
+  color: black;
+  font-size: 25px;
 }
 
 .details {
-    display: flex;
-    margin-top: 20px;
+  display: flex;
+  margin-top: 20px;
 }
 
 .details div:nth-child(1) {
-    width: 30%;
-    display: grid;
-    grid-template-columns: auto auto;
+  width: 30%;
+  display: grid;
+  grid-template-columns: auto auto;
 }
 
 .details div:nth-child(1) a {
-    padding: 0;
-    display: inline;
+  padding: 0;
+  display: inline;
 }
 
 .details div:nth-child(2) {
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .details div:nth-child(2) a {
-    text-decoration: none;
-    padding: 5px 15px;
-    border: 1px solid #0E1010;
-    border-radius: 20px;
-    color: #272D2B;
-font-size: 11px;
-font-family: Neutral Face;
-font-weight: 700;
-margin: 2px;
-width: 165px;
-text-align: center;
+  text-decoration: none;
+  padding: 5px 15px;
+  border: 1px solid #0e1010;
+  border-radius: 20px;
+  color: #272d2b;
+  font-size: 11px;
+  font-weight: 700;
+  margin: 2px;
+  width: 165px;
+  text-align: center;
 }
