--- a/src/styles/ProjectsDetails.module.css
+++ b/src/styles/ProjectsDetails.module.css
@@ -34,15 +34,40 @@
   width: 20px;
 }
 
+.imgStyles  {
+  width: 100%;
+  object-fit: cover;
+}
+
 @media ( 600px <= width <= 992px) {
-  .container > div > div {
+  .container > div  {
     display: grid;
     grid-template-columns: 50% 50%;
-    /* grid-template-rows: 50% 50%; */
+    grid-template-rows: 100%;
+    column-gap: 20px;
   }
 
-  .container > div img {
+  .imgStyles {
+    width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
+    padding: 0;
+  }
+
+  .container > div div:nth-child(2) h2 {
+    margin: 0;
+  }
+
+  .container > div div:nth-child(2) p {
+    text-align: left;
+    text-align-last: left;
+  }
+
+  .iconDiv {
+    justify-content: unsafe;
+  }
+
+  .iconDiv div img {
+  margin: 5px 10px;
   }
 }
